/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.
 * KubeOS is licensed under the Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *     http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR
 * PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";

option go_package = "openeuler.org/kubeos/api/agent";

package agent;

import "google/protobuf/struct.proto";

service OS {
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Rollback(RollbackRequest) returns (RollbackResponse) {}
  rpc Configure(ConfigureRequest) returns (ConfigureResponse) {}
}

message UpdateRequest {
  string version = 1;
  string image_url = 2;
  string check_sum = 3;
  bool flagSafe = 4;
  bool mTLS = 5;
  string image_type = 6;
  string container_image = 7;
  CertsInfo certs = 8;
}

message CertsInfo {
  string ca_caert = 1;
  string client_cert = 2;
  string client_key = 3;
}

message UpdateResponse {
  int32 err = 1;
}

message RollbackRequest {}

message RollbackResponse {
  int32 err = 1;
}

message ConfigureRequest {
   repeated SysConfig configs = 1;
}

message ConfigureResponse {
   int32 err = 1;
}

message SysConfig {
   string model = 1;
   string configPath = 2;
   map<string, KeyInfo> contents = 3;
}

message KeyInfo {
  google.protobuf.Struct value = 1;
  string operation = 2;
}